force-app/main/default/objects/QA__c/QA__c.object-meta.xml
<CustomObject>
    <label>Q&amp;A</label>
    <nameField>
        <displayFormat>Q-{YY}{MM}{DD}{000}</displayFormat>
        <label>Q&amp;A Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Q&amp;A</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>