force-app/main/default/objects/QA__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <defaultValue>IF( $Profile.Name == &apos;Partner Community Member&apos;, 
LEFT($UserRole.Name, LEN($UserRole.Name)- 13), 
LEFT($UserRole.Name, LEN($UserRole.Name)- 16))</defaultValue>
    <label>Partner Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>