force-app/main/default/objects/QA__c/fields/Reply__c.field-meta.xml
<CustomField>
    <fullName>Reply__c</fullName>
    <label>Reply</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>