force-app/main/default/objects/QA__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Program</fullName>
            </value>
            <value>
                <fullName>Partner Fund</fullName>
            </value>
            <value>
                <fullName>Business Management</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Marketing Tool</fullName>
            </value>
            <value>
                <fullName>Etc</fullName>
            </value>
            <value>
                <fullName>Marketing Too</fullName>
                <isActive>false</isActive>
                <label>Marketing Too</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>