force-app/main/default/objects/QA__c/recordTypes/Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Read_Only</fullName>
    <active>true</active>
    <description>This record type when active makes the record read only for partner users.</description>
    <label>Read Only</label>
</RecordType>